--- a/src/app/view/resources.qrc
+++ b/src/app/view/resources.qrc
@@ -20,6 +20,7 @@
         <file>components/CouchIndicator.qml</file>
         <file>components/CouchNavigation.qml</file>
         <file>components/CouchRating.qml</file>
+        <file>components/CouchRow.qml</file>
         <file>components/CouchTab.qml</file>
         <file>components/CouchTabBar.qml</file>
         <file>components/CouchAutohide.qml</file>
@@ -37,7 +38,6 @@
         <file>movies/MovieDetail.qml</file>
         <file>movies/MovieGrid.qml</file>
         <file>movies/MovieHome.qml</file>
-        <file>movies/MovieSources.qml</file>
         <file>images/icon-minus.svg</file>
         <file>images/icon-plus.svg</file>
         <file>images/placeholder-movie.svg</file>
