--- a/src/app/view/resources.qrc
+++ b/src/app/view/resources.qrc
@@ -77,5 +77,17 @@
         <file>controls/Slider.qml</file>
         <file>controls/SliderForm.ui.qml</file>
         <file>images/icon-stop.svg</file>
+        <file>settings/Settings.qml</file>
+        <file>settings/SettingsForm.ui.qml</file>
+        <file>settings/GeneralSettings.qml</file>
+        <file>settings/GeneralSettingsForm.ui.qml</file>
+        <file>settings/ServiceSettings.qml</file>
+        <file>settings/ServiceSettingsForm.ui.qml</file>
+        <file>settings/ProviderSettings.qml</file>
+        <file>settings/ProviderSettingsForm.ui.qml</file>
+        <file>settings/SettingsList.qml</file>
+        <file>settings/SettingsListForm.ui.qml</file>
+        <file>settings/SubSettings.qml</file>
+        <file>settings/SubSettingsForm.ui.qml</file>
     </qresource>
 </RCC>
