--- a/src/app/view/resources.qrc
+++ b/src/app/view/resources.qrc
@@ -1,82 +1,35 @@
 <RCC>
     <qresource prefix="/">
-        <file>Main.qml</file>
-        <file>MainForm.ui.qml</file>
-        <file>Content.qml</file>
-        <file>ContentForm.ui.qml</file>
-        <file>Header.qml</file>
-        <file>HeaderForm.ui.qml</file>
-        <file>PlaybackControls.qml</file>
-        <file>PlaybackControlsForm.ui.qml</file>
-        <file>HeaderMenu.qml</file>
-        <file>HeaderMenuForm.ui.qml</file>
-        <file>music/Music.qml</file>
-        <file>music/MusicForm.ui.qml</file>
-        <file>Player.qml</file>
-        <file>PlayerForm.ui.qml</file>
-        <file>components/DateTimeLabel.qml</file>
-        <file>components/DateTimeLabelForm.ui.qml</file>
         <file>controls/Button.qml</file>
         <file>controls/ButtonForm.ui.qml</file>
         <file>controls/TabBar.qml</file>
         <file>controls/TabBarForm.ui.qml</file>
         <file>controls/TabButton.qml</file>
         <file>controls/TabButtonForm.ui.qml</file>
-        <file>controls/ComboBox.qml</file>
-        <file>controls/ComboBoxForm.ui.qml</file>
-        <file>controls/DropdownButton.qml</file>
-        <file>controls/DropdownButtonForm.ui.qml</file>
-        <file>components/ItemListDelegate.qml</file>
-        <file>components/ItemListDelegateForm.ui.qml</file>
-        <file>images/media-placeholder.svg</file>
         <file>controls/LargeLabel.qml</file>
         <file>controls/LargeLabelForm.ui.qml</file>
-        <file>components/ItemListView.qml</file>
-        <file>components/ItemListViewForm.ui.qml</file>
         <file>controls/TabView.qml</file>
         <file>controls/TabViewForm.ui.qml</file>
-        <file>controls/DropdownItem.qml</file>
-        <file>controls/DropdownItemForm.ui.qml</file>
-        <file>components/SearchField.qml</file>
-        <file>components/SearchFieldForm.ui.qml</file>
-        <file>images/drop-indicator.svg</file>
-        <file>images/search-indicator.svg</file>
-        <file>controls/Keyboard.qml</file>
-        <file>controls/KeyboardForm.ui.qml</file>
-        <file>controls/Popup.qml</file>
-        <file>controls/PopupForm.ui.qml</file>
-        <file>controls/KeyboardRow.qml</file>
-        <file>controls/KeyboardRowForm.ui.qml</file>
-        <file>components/ItemSearchView.qml</file>
-        <file>components/ItemSearchViewForm.ui.qml</file>
-        <file>Application.qml</file>
         <file>controls/BusyIndicator.qml</file>
         <file>controls/BusyIndicatorForm.ui.qml</file>
-        <file>ContentStack.qml</file>
-        <file>ContentStackForm.ui.qml</file>
-        <file>music/MusicDetail.qml</file>
-        <file>music/MusicDetailForm.ui.qml</file>
         <file>controls/ApplicationWindow.qml</file>
         <file>controls/ApplicationWindowForm.ui.qml</file>
         <file>controls/StackView.qml</file>
         <file>controls/StackViewForm.ui.qml</file>
-        <file>Detail.qml</file>
-        <file>DetailForm.ui.qml</file>
-        <file>music/TrackDelegate.qml</file>
-        <file>music/TrackDelegateForm.ui.qml</file>
         <file>controls/MediumLabel.qml</file>
         <file>controls/MediumLabelForm.ui.qml</file>
-        <file>music/AlbumDelegate.qml</file>
-        <file>music/AlbumDelegateForm.ui.qml</file>
         <file>controls/IconButton.qml</file>
         <file>controls/IconButtonForm.ui.qml</file>
-        <file>images/icon-next.svg</file>
-        <file>images/icon-pause.svg</file>
-        <file>images/icon-play.svg</file>
-        <file>images/icon-previous.svg</file>
-        <file>controls/Slider.qml</file>
-        <file>controls/SliderForm.ui.qml</file>
-        <file>images/icon-stop.svg</file>
+        <file>components/ItemListDelegate.qml</file>
+        <file>components/ItemListDelegateForm.ui.qml</file>
+        <file>components/PlaybackControls.qml</file>
+        <file>components/PlaybackControlsForm.ui.qml</file>
+        <file>components/ItemListView.qml</file>
+        <file>components/ItemListViewForm.ui.qml</file>
+        <file>components/SearchBar.qml</file>
+        <file>components/SearchBarForm.ui.qml</file>
+        <file>components/PlaybackInfo.qml</file>
+        <file>components/PlaybackInfoForm.ui.qml</file>
         <file>settings/Settings.qml</file>
         <file>settings/SettingsForm.ui.qml</file>
         <file>settings/GeneralSettings.qml</file>
@@ -89,5 +42,49 @@
         <file>settings/SettingsListForm.ui.qml</file>
         <file>settings/SubSettings.qml</file>
         <file>settings/SubSettingsForm.ui.qml</file>
+        <file>music/Music.qml</file>
+        <file>music/MusicForm.ui.qml</file>
+        <file>music/MusicDetail.qml</file>
+        <file>music/MusicDetailForm.ui.qml</file>
+        <file>images/media-placeholder.svg</file>
+        <file>images/icon-search.svg</file>
+        <file>images/icon-next.svg</file>
+        <file>images/icon-pause.svg</file>
+        <file>images/icon-play.svg</file>
+        <file>images/icon-previous.svg</file>
+        <file>Application.qml</file>
+        <file>Main.qml</file>
+        <file>MainForm.ui.qml</file>
+        <file>Content.qml</file>
+        <file>ContentForm.ui.qml</file>
+        <file>Header.qml</file>
+        <file>HeaderForm.ui.qml</file>
+        <file>Player.qml</file>
+        <file>PlayerForm.ui.qml</file>
+        <file>ContentStack.qml</file>
+        <file>ContentStackForm.ui.qml</file>
+        <file>Detail.qml</file>
+        <file>DetailForm.ui.qml</file>
+        <file>qtquickcontrols2.conf</file>
+        <file>components/PlaybackActions.qml</file>
+        <file>components/PlaybackActionsForm.ui.qml</file>
+        <file>controls/TextField.qml</file>
+        <file>controls/TextFieldForm.ui.qml</file>
+        <file>controls/Icon.qml</file>
+        <file>controls/IconForm.ui.qml</file>
+        <file>controls/PlaceholderImage.qml</file>
+        <file>controls/PlaceholderImageForm.ui.qml</file>
+        <file>controls/ProgressBar.qml</file>
+        <file>controls/ProgressBarForm.ui.qml</file>
+        <file>controls/Pane.qml</file>
+        <file>controls/PaneForm.ui.qml</file>
+        <file>SearchContainer.qml</file>
+        <file>SearchContainerForm.ui.qml</file>
+        <file>SearchResult.qml</file>
+        <file>SearchResultForm.ui.qml</file>
+        <file>controls/Label.qml</file>
+        <file>controls/LabelForm.ui.qml</file>
+        <file>Master.qml</file>
+        <file>MasterForm.ui.qml</file>
     </qresource>
 </RCC>
