added translations for local music provider settings

--- a/src/provider/local/src/music/resources.qrc
+++ b/src/provider/local/src/music/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/localmusicprovider">
         <file>icons/play.svg</file>
+        <file>translations/music.qm</file>
     </qresource>
 </RCC>
